bk_ida/gccida/c2/count_or_remove_death_notes
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/count_or_remove_death_notes/src/flow.c:4743:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v16 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v17] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/count_or_remove_death_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/count_or_remove_death_notes/src/obj/flow.o] Error 1
